<resources>
    <string name="app_name">AIE - Naveen</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Dashboard</string>
    <string name="second_fragment_label">Create new TODO Task</string>

    <string name="datetimepicker_time">Time</string>
    <string name="datetimepicker_date">Date</string>
    <string name="datetimepicker_next">Next</string>
    <string name="datetimepicker_close">Confirm</string>

    <string name="successfully_stored_data">successfully stored in Room data base.</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="new_todo_task_heading">Please enter below information to create new TODO task.</string>
    <string name="fragment_tag">fragmentDatePicker</string>
    <string name="successfully_updated_stored_data">successfully updated in Room data base.</string>
    <string name="successfully_deleted_stored_data">successfully deleted from Room data base.</string>
    <string name="update">Update</string>
    <string name="delete_task">Delete Task</string>
    <string name="name_exists">Either Name and Date/time already exists in ROOM database.</string>
    <string name="update_todo_task_heading">=> Modify below information as per your wish and select UPDATE option. \n\n=> If you wish to delete this TODO task, then please select DELETE TASK option.</string>

</resources>