<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.naveen.aiedemo.view.todolist.TodoTaskViewModel" />

        <import type="android.text.TextUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.newtodo.NewTodoFragment">


        <EditText
            android:id="@+id/taskName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/taskBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/description"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="@+id/taskName"
            app:layout_constraintStart_toStartOf="@+id/taskName"
            app:layout_constraintTop_toBottomOf="@+id/taskName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{ (!TextUtils.isEmpty(taskBio.text.toString())) || !TextUtils.isEmpty(taskBio.text.toString())}"
            android:onClick="@{(view) -> viewModel.saveNewTask()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeButton" />

        <Button
            android:id="@+id/dateTimeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            android:gravity="left|center"
            android:onClick="@{(view) -> viewModel.dateTimePickerClick()}"
            android:text="@{viewModel.getDateInString(viewModel.userSelectedDateTime)}"
            app:layout_constraintEnd_toEndOf="@+id/taskBio"
            app:layout_constraintStart_toStartOf="@+id/taskBio"
            app:layout_constraintTop_toBottomOf="@+id/taskBio" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/new_todo_task_heading"
            android:textColor="@color/purple_700"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
